# El-Triangule

./: .gitignore
docker/: docker-compose.yaml
scripts/: generate_api_client.py
services/backend/: Dockerfile  alembic.ini  pyproject.toml
services/backend/app/alembic/: env.py
services/backend/app/alembic/versions/: cc73345a3f00_initial.py
services/backend/app/src/: config.py  database.py  main.py
services/backend/app/src/auth/: controller.py  dependencies.py  jwt.py  middleware.py  models.py  repository.py  router.py  schemas.py
services/backend/app/src/base/: cache.py  controller.py  error.py  event.py  model.py  repository.py  router.py  schema.py
services/backend/app/src/events/: controller.py  models.py  repository.py  router.py  schemas.py
services/backend/app/src/images/: controller.py  models.py  repository.py  router.py  schemas.py
services/backend/app/src/messages/: controller.py  models.py  repository.py  router.py  schemas.py  websocket.py
services/backend/app/src/notifications/: controller.py  models.py  repository.py  router.py  schemas.py
services/backend/app/src/payments/: controller.py  models.py  repository.py  router.py  schemas.py
services/backend/app/src/ports/: event.py  filtering.py  repository.py  router.py
services/database/init/: init.sql
services/frontend/: Dockerfile  package.json
services/frontend/src/: middleware.ts
services/frontend/src/app/: globals.css  layout.tsx
services/frontend/src/components/: bottom-nav.tsx  event-card.tsx  notification-item.tsx
services/frontend/src/hooks/: use-events.ts  (+1 more)
(+18 files in other folders)
